# qadoc

./: .gitignore  pyproject.toml
.github/workflows/: release.yml
src/qadoc/: __init__.py  __main__.py  qa.py
